--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-gAPP_NAME="Laravel Telegram Bot"
+APP_NAME="Laravel Telegram Bot"
 APP_ENV=local
 APP_KEY=base64:DeFn1UFDFCF4ea/HhkMLr4pIhNoNzYbme3ATHKGlpSE=
 APP_DEBUG=true
-APP_URL=https://7188-46-118-155-72.ngrok-free.app/
+APP_URL=https://f942-46-118-155-72.ngrok-free.app/
 APP_PORT=9005
 
 LOG_CHANNEL=stack
@@ -18,25 +18,30 @@ DB_USERNAME=root
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=file
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
 
-REDIS_HOST=127.0.0.1
+#REDIS_HOST=127.0.0.1
+#REDIS_PASSWORD=null
+#REDIS_PORT=6379
+
+CACHE_DRIVER=redis
+REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
+REDIS_CLIENT=predis
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailpit
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=addressjaka@gmail.com
+MAIL_PASSWORD="hulclrwbbdsadxfr"
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=addressjaka@gmail.com
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
